agregando vistas sedes

--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -72,51 +72,12 @@
           <!-- Page Header-->
           <header class="page-header">
             <div class="container-fluid">
-              <h2 class="no-margin-bottom">Inicio</h2>
+              <h2 class="no-margin-bottom">Sede Santiago</h2>
             </div>
           </header>
           <!-- Seccion principal de visualización-->
           <section class="dashboard-counts no-padding-bottom">
-            <div class="container-fluid">
-              <div class="row bg-white has-shadow">
-                <!-- Sede México-->
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <div class="icon bg-blue"><i class="icon-user"></i></div>
-                    <div class="title text-center">Estudiantes<br><p id="sede1"></p>
-                      <div class="progress">
-                        <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
-                      </div>
-                    </div>
-                    <div class="number"><strong id="students-sede1"></strong></div>
-                  </div>
-                </div>
-                <!-- Sede Santiago -->
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <div class="icon bg-pinkLab"><i class="icon-user"></i></div>
-                    <div class="title text-center">Estudiantes<br><span id="sede2"></span>
-                      <div class="progress">
-                        <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
-                      </div>
-                    </div>
-                    <div class="number"><strong id="students-sede2"></strong></div>
-                  </div>
-                </div>
-                <!-- Sede Lima -->
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <div class="icon bg-greenLab"><i class="icon-user"></i></div>
-                    <div class="title text-center">Estudiantes<br><span id="sede3"></span>
-                      <div class="progress">
-                        <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
-                      </div>
-                    </div>
-                    <div class="number"><strong id="students-sede3"></strong></div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            
           </section>
           <!-- Page Footer-->
           <footer class="main-footer">
