--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -77,7 +77,52 @@
           </header>
           <!-- Seccion principal de visualización-->
           <section class="dashboard-counts no-padding-bottom">
-            
+            <div class="container-fluid">
+              <div class="row bg-white has-shadow">
+                <!-- Sede México-->
+                <div class="col-xl-4 col-sm-12 col-md-4">
+                  <div class="item d-flex align-items-center">
+                    <div class="icon bg-blue"><i class="icon-user"></i></div>
+                    <a href="sedeLima.html">
+                      <div class="title text-center"><p id="generation1"></p>
+                        <div class="progress">
+                          <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
+                        </div>
+                      </div>
+                    </a>
+                    <div class="number"><strong id="students-generation1"></strong></div>
+                  </div>
+                </div>
+                <!-- Sede Santiago -->
+                <div class="col-xl-4 col-sm-12 col-md-4">
+                  <div class="item d-flex align-items-center">
+                    <div class="icon bg-pinkLab"><i class="icon-user"></i></div>
+                    <a href="sedeMexico.html">
+                      <div class="title text-center"><span id="generation2"></span>
+                        <div class="progress">
+                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
+                        </div>
+                      </div>
+                    </a>
+                    <div class="number"><strong id="students-generation2"></strong></div>
+                  </div>
+                </div>
+                <!-- Sede Lima -->
+                <div class="col-xl-4 col-sm-12 col-md-4">
+                  <div class="item d-flex align-items-center">
+                    <div class="icon bg-greenLab"><i class="icon-user"></i></div>
+                    <a href="sedeSantiago.html">
+                      <div class="title text-center"><span id="generation3"></span>
+                        <div class="progress">
+                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
+                        </div>
+                      </div>
+                    </a>
+                    <div class="number"><strong id="students-generation3"></strong></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
           <!-- Page Footer-->
           <footer class="main-footer">
