--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -30,7 +30,7 @@
             <div class="navbar-holder d-flex align-items-center justify-content-between">
               <!-- Navbar Header-->
               <div class="navbar-header">
-                <!-- Navbar Brand --><a href="index.html" class="navbar-brand d-none d-sm-inline-block">
+                <!-- Navbar Brand --><a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
                   <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
                 <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
@@ -82,7 +82,6 @@
                 <!-- Sede México-->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <div class="icon bg-blue"><i class="icon-user"></i></div>
                     <a href="sedeLima.html">
                       <div class="title text-center"><p id="generation1"></p>
                         <div class="progress">
@@ -91,34 +90,35 @@
                       </div>
                     </a>
                     <div class="number"><strong id="students-generation1"></strong></div>
+                    <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
                   </div>
                 </div>
                 <!-- Sede Santiago -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <div class="icon bg-pinkLab"><i class="icon-user"></i></div>
                     <a href="sedeMexico.html">
-                      <div class="title text-center"><span id="generation2"></span>
+                      <div class="title text-center"><p id="generation2"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
                         </div>
                       </div>
                     </a>
                     <div class="number"><strong id="students-generation2"></strong></div>
+                    <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
                   </div>
                 </div>
                 <!-- Sede Lima -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <div class="icon bg-greenLab"><i class="icon-user"></i></div>
                     <a href="sedeSantiago.html">
-                      <div class="title text-center"><span id="generation3"></span>
+                      <div class="title text-center"><p id="generation3"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
                         </div>
                       </div>
                     </a>
                     <div class="number"><strong id="students-generation3"></strong></div>
+                    <div class="icon bg-greenLab margin-left"><i class="icon-user"></i></div>
                   </div>
                 </div>
               </div>
