--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -30,7 +30,7 @@
             <div class="navbar-holder d-flex align-items-center justify-content-between">
               <!-- Navbar Header-->
               <div class="navbar-header">
-                <!-- Navbar Brand --><a href="index.html" class="navbar-brand d-none d-sm-inline-block">
+                <!-- Navbar Brand --><a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
                   <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
                 <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
