mostrando generaciones por sede

--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -144,5 +144,8 @@
     <script src="../js/front.js"></script>
     <script src="../data.js"></script>
     <script src="../main.js"></script>  
+    <script>
+      getDataMain();
+    </script>
   </body>
 </html>
