--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -79,7 +79,6 @@
           <section class="dashboard-counts no-padding-bottom">
             <div class="container-fluid">
               <div class="row bg-white has-shadow">
-                <!-- Sede México-->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
                     <a href="sedeLima.html">
@@ -93,7 +92,6 @@
                     <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
                   </div>
                 </div>
-                <!-- Sede Santiago -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
                     <a href="sedeMexico.html">
@@ -107,7 +105,6 @@
                     <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
                   </div>
                 </div>
-                <!-- Sede Lima -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
                     <a href="sedeSantiago.html">
@@ -145,5 +142,8 @@
     <script src="../js/front.js"></script>
     <script src="../data.js"></script>
     <script src="../main.js"></script>
+    <script>
+      getDataSede('Lima');
+    </script>
   </body>
 </html>
