cambiando estilos vistas

--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -478,7 +478,7 @@ nav.side-navbar ul li.active > a:hover {
 }
 
 nav.side-navbar ul li li.active > a {
-  background: #8e81f1;
+  background: #c59608;
 }
 
 nav.side-navbar ul li ul {
