--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -57,10 +57,10 @@
           </div>
           <span class="heading">Opciones  </span>
           <ul class="list-unstyled">
-            <li class="active"><a href="dataMain.html"><i class="icon-home"></i>Inicio </a></li>
+            <li><a href="dataMain.html"><i class="icon-home"></i>Inicio </a></li>
             <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                  <li><a href="sedeLima.html" id="sedeM1"></a></li>
+                  <li class="active"><a href="sedeLima.html" id="sedeM1"></a></li>
                   <li><a href="sedeMexico.html" id="sedeM2"></a></li>
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
