agregando vista generaciones

--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -6,31 +6,22 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
-    <!-- Font Awesome CSS-->
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
-    <!-- Fontastic Custom icon font-->
     <link rel="stylesheet" href="../css/fontastic.css">
-    <!-- Google fonts - Poppins -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-    <!-- theme stylesheet-->
     <link rel="stylesheet" href="../css/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="../css/custom.css">
-    <!-- Favicon-->
     <link rel="shortcut icon" href="../img/logo.jpg">
   </head>
   <body>
     <div class="page">
-      <!-- Main Navbar-->
       <header class="header">
         <nav class="navbar">
           <div class="container-fluid">
             <div class="navbar-holder d-flex align-items-center justify-content-between">
-              <!-- Navbar Header-->
               <div class="navbar-header">
-                <!-- Navbar Brand --><a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
+                <a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
                   <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
                 <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
@@ -136,11 +127,9 @@
         </div>
       </div>
     </div>
-    <!-- JavaScript files-->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/popper.js/umd/popper.min.js"> </script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Main File-->
     <script src="../js/front.js"></script>
     <script src="../data.js"></script>
     <script src="../main.js"></script>  
