--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -81,7 +81,7 @@
               <div class="row bg-white has-shadow">
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="#">
+                    <a href="generaciones.html?generation1Santiago">
                       <div class="title text-center"><p id="generation1"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="#">
+                    <a href="generaciones.html?generation2Santiago">
                       <div class="title text-center"><p id="generation2"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="#">
+                    <a href="generaciones.html?generation3Santiago">
                       <div class="title text-center"><p id="generation3"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
