--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -6,38 +6,27 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
-    <!-- Font Awesome CSS-->
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
-    <!-- Fontastic Custom icon font-->
     <link rel="stylesheet" href="../css/fontastic.css">
-    <!-- Google fonts - Poppins -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-    <!-- theme stylesheet-->
     <link rel="stylesheet" href="../css/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="../css/custom.css">
-    <!-- Favicon-->
     <link rel="shortcut icon" href="../img/logo.jpg">
   </head>
   <body>
     <div class="page">
-      <!-- Main Navbar-->
       <header class="header">
         <nav class="navbar">
           <div class="container-fluid">
             <div class="navbar-holder d-flex align-items-center justify-content-between">
-              <!-- Navbar Header-->
               <div class="navbar-header">
-                <!-- Navbar Brand --><a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
+                <a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
                   <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
-                <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
+                  <a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
               </div>
-              <!-- Navbar Menu -->
               <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                <!-- Logout    -->
                 <li class="nav-item"><a href="../index.html" class="nav-link logout"> <span class="d-none d-sm-inline">Salir</span><i class="fa fa-sign-out"></i></a></li>
               </ul>
             </div>
@@ -45,9 +34,7 @@
         </nav>
       </header>
       <div class="page-content d-flex align-items-stretch"> 
-        <!-- Side Navbar -->
         <nav class="side-navbar">
-          <!-- Sidebar Header-->
           <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="../img/avatar-5.jpg"  class="img-fluid rounded-circle"></div>
             <div class="title">
@@ -69,7 +56,6 @@
           </ul>
         </nav>
         <div class="content-inner">
-          <!-- Page Header-->
           <header class="page-header">
             <div class="container-fluid">
               <h2 class="no-margin-bottom">Sede Lima</h2>
@@ -81,7 +67,7 @@
               <div class="row bg-white has-shadow">
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="sedeLima.html">
+                    <a href="generaciones.html">
                       <div class="title text-center"><p id="generation1"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
@@ -94,7 +80,7 @@
                 </div>
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="sedeMexico.html">
+                    <a href="generaciones.html">
                       <div class="title text-center"><p id="generation2"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
@@ -107,7 +93,7 @@
                 </div>
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="sedeSantiago.html">
+                    <a href="generaciones.html">
                       <div class="title text-center"><p id="generation3"></p>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
