--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -107,7 +107,11 @@
               </div>
             </div>
           </section>
-          <!-- Page Footer-->
+          <section class="dashboard-header">
+            <div class="container-fluid">
+              <div class="row" id="general-statistic"></div>
+            </div>
+          </section>
           <footer class="main-footer">
             <div class="container-fluid">
               <div class="row">
@@ -120,11 +124,9 @@
         </div>
       </div>
     </div>
-    <!-- JavaScript files-->
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/popper.js/umd/popper.min.js"> </script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Main File-->
     <script src="../js/front.js"></script>
     <script src="../data.js"></script>
     <script src="../main.js"></script>
