--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -114,7 +114,11 @@
               </div>
             </div>
           </section>
-          <!-- Page Footer-->
+          <section class="dashboard-header">
+            <div class="container-fluid">
+              <div class="row" id="general-statistic"></div>
+            </div>
+          </section>
           <footer class="main-footer">
             <div class="container-fluid">
               <div class="row">
