Agregando porcentaje avance progreso

--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -58,7 +58,7 @@
         <div class="content-inner">
           <header class="page-header">
             <div class="container-fluid">
-              <h2 class="no-margin-bottom"><p id="sede"></p><p id="generacion"></p></h2>
+              <h2 class="no-margin-bottom">Consultas</h2>
             </div>
           </header>
           
