--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -56,7 +56,7 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="#"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
