--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -52,7 +52,7 @@
                   <li class="active"><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="#"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
@@ -132,7 +132,7 @@
                               <th>Nombre</th>
                               <th>Correo</th>
                               <th>Generación</th>
-                              <th>Turno</th>
+                              <th>% Progreso</th>
                             </tr>
                           </thead>
                           <tbody id="table-students-body"></tbody>
