Reorganizando código js

--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -100,7 +100,7 @@
                 </div>
                 <!-- Sede Lima -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">                    <a href="sedeSantiago.html">
+                  <div class="item d-flex align-items-center"><a href="sedeSantiago.html">
                       <div class="title text-center">Estudiantes<br><span id="sede3"></span>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
@@ -114,6 +114,7 @@
               </div>
             </div>
           </section>
+          <!-- Sección Estadisticas Generales -->
           <section class="dashboard-header">
             <div class="container-fluid">
               <div class="row" id="general-statistic"></div>
@@ -138,7 +139,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>  
     <script>
-      getDataMain();
+      data.getDataMain();
     </script>
   </body>
 </html>
