--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -162,7 +162,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      getDataSede('Lima');
+      data.getDataSede('Lima');
     </script>
   </body>
 </html>
