--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -165,7 +165,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      getDataSede('Santiago');
+      data.getDataSede('Santiago');
     </script>
   </body>
 </html>
