--- a/src/views/sedeMexico.html
+++ b/src/views/sedeMexico.html
@@ -167,7 +167,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      getDataSede('México');
+      data.getDataSede('México');
     </script>
   </body>
 </html>
