Modificando vista consultas

--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -24,21 +24,17 @@
                 <a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
                   <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
-                <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
+                    <a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
               </div>
-              <!-- Navbar Menu -->
               <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                <!-- Logout    -->
                 <li class="nav-item"><a href="../index.html" class="nav-link logout"> <span class="d-none d-sm-inline">Salir</span><i class="fa fa-sign-out"></i></a></li>
               </ul>
             </div>
           </div>
         </nav>
       </header>
-      <div class="page-content d-flex align-items-stretch"> 
-        <!-- Side Navbar -->
+      <div class="page-content d-flex align-items-stretch">
         <nav class="side-navbar">
-          <!-- Sidebar Header-->
           <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="../img/avatar-5.jpg"  class="img-fluid rounded-circle"></div>
             <div class="title">
@@ -56,7 +52,7 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
