--- a/src/views/generaciones.html
+++ b/src/views/generaciones.html
@@ -52,7 +52,7 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
