--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -52,7 +52,7 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">   
-                        <table class="table table-striped table-sm">
+                        <table class="table table-striped table-sm table-hover">
                           <thead>
                             <tr>
                               <th>#</th>
