--- a/src/views/sedeMexico.html
+++ b/src/views/sedeMexico.html
@@ -34,9 +34,7 @@
         </nav>
       </header>
       <div class="page-content d-flex align-items-stretch"> 
-        <!-- Side Navbar -->
         <nav class="side-navbar">
-          <!-- Sidebar Header-->
           <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="../img/avatar-5.jpg"  class="img-fluid rounded-circle"></div>
             <div class="title">
@@ -54,11 +52,10 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
-          <!-- Page Header-->
           <header class="page-header">
             <div class="container-fluid">
               <h2 class="no-margin-bottom">Sede México</h2>
@@ -127,7 +124,7 @@
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">   
-                        <table class="table table-striped table-sm">
+                        <table class="table table-striped table-sm table-hover">
                           <thead>
                             <tr>
                               <th>#</th>
