--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -52,7 +52,7 @@
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li class="active"><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
@@ -61,6 +61,32 @@
               <h2 class="no-margin-bottom">Consultas</h2>
             </div>
           </header>
+          <!-- Sección formulario de consultas -->
+          <section class="forms"> 
+            <div class="container-fluid">
+              <div class="row">
+                <!-- Basic Form-->
+                <div class="col-lg-12">
+                  <div class="card">
+                    <div class="card-header d-flex align-items-center">
+                      <h3 class="h4">Consulta de estudiantes</h3>
+                    </div>
+                    <div class="card-body">
+                      <p>Introduce el nombre de la estudiante</p>
+                      <form>
+                        <div class="form-group">
+                          <input type="text" placeholder="Nombre de la estudiante" class="form-control"  required>
+                        </div>
+                        <div class="form-group">
+                          <button class="btn btn-primary">Buscar</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>                
+              </div>
+            </div>
+          </section>
           
           <!-- Page Footer-->
           <footer class="main-footer">
@@ -82,7 +108,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      getLocation();
+      data.getDataGeneration();
     </script>
   </body>
 </html>
