--- a/src/views/sedeSantiago.html
+++ b/src/views/sedeSantiago.html
@@ -52,11 +52,10 @@
                   <li class="active"><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
-            <li><a href="consultas.html"> <i class="icon-interface-windows"></i>Consultas </a></li>
+            <li><a href="consultas.html"> <i class="fa fa-search"></i>Consultas </a></li>
           </ul>
         </nav>
         <div class="content-inner">
-          <!-- Page Header-->
           <header class="page-header">
             <div class="container-fluid">
               <h2 class="no-margin-bottom">Sede Santiago</h2>
@@ -125,7 +124,7 @@
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">   
-                        <table class="table table-striped table-sm">
+                        <table class="table table-striped table-sm table-hover">
                           <thead>
                             <tr>
                               <th>#</th>
