--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -47,7 +47,7 @@
             <li><a href="dataMain.html"><i class="icon-home"></i>Inicio </a></li>
             <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                  <li class="active"><a href="sedeLima.html" id="sedeM1"></a></li>
+                  <li><a href="sedeLima.html" id="sedeM1"></a></li>
                   <li><a href="sedeMexico.html" id="sedeM2"></a></li>
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
@@ -75,15 +75,26 @@
                       <p>Introduce el nombre de la estudiante</p>
                       <form>
                         <div class="form-group">
-                          <input type="text" placeholder="Nombre de la estudiante" class="form-control"  required>
+                          <input type="text" placeholder="Nombre de la estudiante" class="form-control"  required id="name-student">
                         </div>
                         <div class="form-group">
-                          <button class="btn btn-primary">Buscar</button>
+                          <button class="btn btn-primary" id="btn-seach">Buscar</button>
                         </div>
                       </form>
                     </div>
                   </div>
                 </div>                
+              </div>
+            </div>
+          </section>
+          <!--Section Resultados consulta -->
+          <section class="feeds no-padding-top">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="articles card" id='header-student-card'>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
@@ -108,7 +119,7 @@
     <script src="../data.js"></script>
     <script src="../main.js"></script>
     <script>
-      data.getDataGeneration();
+      data.getDataSearch();
     </script>
   </body>
 </html>
