--- a/src/views/sedeMexico.html
+++ b/src/views/sedeMexico.html
@@ -45,7 +45,7 @@
           <span class="heading">Opciones  </span>
           <ul class="list-unstyled">
             <li><a href="dataMain.html"><i class="icon-home"></i>Inicio </a></li>
-            <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
+            <li class="active"><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
                   <li><a href="sedeLima.html" id="sedeM1"></a></li>
                   <li class="active"><a href="sedeMexico.html" id="sedeM2"></a></li>
