agregando función sortStudents

--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -62,7 +62,7 @@
             </div>
           </header>
           <!-- Sección formulario de consultas -->
-          <section class="forms"> 
+          <section class="forms no-padding-bottom"> 
             <div class="container-fluid">
               <div class="row">
                 <!-- Basic Form-->
