agregando listado por generaciones

--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -48,7 +48,7 @@
             <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
                   <li><a href="sedeLima.html" id="sedeM1"></a></li>
-                  <li><a href="sedeMexico.html" id="sedeM2"></a></li>
+                  <li><a href="sedeMéxico.html" id="sedeM2"></a></li>
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
