--- a/src/views/dataMain.html
+++ b/src/views/dataMain.html
@@ -48,7 +48,7 @@
             <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
                   <li><a href="sedeLima.html" id="sedeM1"></a></li>
-                  <li><a href="sedeMexico.html" id="sedeM2"></a></li>
+                  <li><a href="sedeMéxico.html" id="sedeM2"></a></li>
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
@@ -83,7 +83,7 @@
                 <!-- Sede Santiago -->
                 <div class="col-xl-4 col-sm-12 col-md-4">
                   <div class="item d-flex align-items-center">
-                    <a href="sedeMexico.html">
+                    <a href="sedeMéxico.html">
                       <div class="title text-center">Estudiantes<br><span id="sede2"></span>
                         <div class="progress">
                           <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
