--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -90,6 +90,15 @@ table {
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1), -2px -2px 3px rgba(0, 0, 0, 0.1);
 }
 
+.margin-left{
+  margin-left: 5px;
+} 
+
+.no-button-sedes{
+  border: none;
+  background-color: inherit;
+}
+
 .card-close .dropdown-menu a {
   color: #999 !important;
 }
@@ -2670,7 +2679,7 @@ a {
 }
 
 a:focus, a:hover {
-  color: #3b25e6;
+  color: #c59608;
 }
 
 .tags-search{
