--- a/src/views/sedeLima.html
+++ b/src/views/sedeLima.html
@@ -48,7 +48,7 @@
             <li class="active"><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Sedes </a>
                 <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
                   <li class="active"><a href="sedeLima.html" id="sedeM1"></a></li>
-                  <li><a href="sedeMexico.html" id="sedeM2"></a></li>
+                  <li><a href="sedeMéxico.html" id="sedeM2"></a></li>
                   <li><a href="sedeSantiago.html" id="sedeM3"></a></li>
                 </ul>
             </li>
@@ -65,45 +65,45 @@
           <section class="dashboard-counts no-padding-bottom">
             <div class="container-fluid">
               <div class="row bg-white has-shadow">
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <a href="generaciones.html">
-                      <div class="title text-center"><p id="generation1"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
+                <button class="no-button-sedes" id="btn-generation1">
+                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="Lima">
+                    <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation1"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
+                          </div>
                         </div>
-                      </div>
-                    </a>
-                    <div class="number"><strong id="students-generation1"></strong></div>
-                    <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
+                      <div class="number"><strong id="students-generation1"></strong></div>
+                      <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <a href="generaciones.html">
-                      <div class="title text-center"><p id="generation2"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
+                </button>
+                <button class="no-button-sedes" id="btn-generation2">
+                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="Lima">
+                    <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation2"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
+                          </div>
                         </div>
-                      </div>
-                    </a>
-                    <div class="number"><strong id="students-generation2"></strong></div>
-                    <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
+                      <div class="number"><strong id="students-generation2"></strong></div>
+                      <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xl-4 col-sm-12 col-md-4">
-                  <div class="item d-flex align-items-center">
-                    <a href="generaciones.html">
-                      <div class="title text-center"><p id="generation3"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
+                </button>
+                <button class="no-button-sedes" id="btn-generation3">
+                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="Lima">
+                    <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation3"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
+                          </div>
                         </div>
-                      </div>
-                    </a>
-                    <div class="number"><strong id="students-generation3"></strong></div>
-                    <div class="icon bg-greenLab margin-left"><i class="icon-user"></i></div>
+                      <div class="number"><strong id="students-generation3"></strong></div>
+                      <div class="icon bg-greenLab margin-left"><i class="icon-user"></i></div>
+                    </div>
                   </div>
-                </div>
+                </button>
               </div>
             </div>
           </section>
@@ -120,7 +120,7 @@
                 <div class="col-lg-12">
                   <div class="card">
                     <div class="card-header d-flex align-items-center">
-                      <h3 class="h4">Estudiantes</h3>
+                      <h3 class="h4" id='table-title'>Estudiantes</h3>
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">   
