--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/fontastic.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.default.css" id="theme-stylesheet">
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="shortcut icon" href="../img/logo.jpg">
@@ -22,7 +22,7 @@
             <div class="navbar-holder d-flex align-items-center justify-content-between">
               <div class="navbar-header">
                 <a href="dataMain.html" class="navbar-brand d-none d-sm-inline-block">
-                  <div class="brand-text d-none d-lg-inline-block"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
+                  <div class="brand-text d-none d-lg-inline-block font-titles"><span><strong>&#60;Laboratoria&#62;</strong></span> Admin</div>
                   <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>&#60; L &#62;</strong></div></a>
                   <a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
               </div>
@@ -104,7 +104,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-6">
-                  <p><span><strong>&#60;Laboratoria&#62;</strong></span>Admin </p>
+                  <p class="font-titles"><span><strong>&#60;Laboratoria&#62;</strong></span>Admin </p>
                 </div>  
               </div>
             </div>
