--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -160,6 +160,10 @@ input {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1), -1px 0 2px rgba(0, 0, 0, 0.05);
 }
 
+option[value=""][disabled] {
+  display: none;
+}
+
 .card-header {
   -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05);
