--- a/src/views/consultas.html
+++ b/src/views/consultas.html
@@ -57,14 +57,13 @@
         <div class="content-inner">
           <header class="page-header">
             <div class="container-fluid">
-              <h2 class="no-margin-bottom">Consultas</h2>
+              <h2 class="no-margin-bottom" id="titile-page">Consultas</h2>
             </div>
           </header>
           <!-- Sección formulario de consultas -->
-          <section class="forms no-padding-bottom"> 
+          <section class="forms no-padding-bottom" id="div1"> 
             <div class="container-fluid">
               <div class="row">
-                <!-- Basic Form-->
                 <div class="col-lg-12">
                   <div class="card">
                     <div class="card-header d-flex align-items-center">
@@ -87,7 +86,7 @@
             </div>
           </section>
           <!--Section Resultados consulta -->
-          <section class="feeds no-padding-top">
+          <section class="feeds no-padding-top" id="div2">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-12">
@@ -97,6 +96,43 @@
               </div>
             </div>
           </section>
+          <div id="div3"></div>
+          <!-- Sección información individual -->
+          <section class="dashboard-header" id="individual-information">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="statistics col-lg-3 col-12">
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-pinkLab"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje1"></strong><br><small id="topic1"></small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-greenLab"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje2"></strong><br><small id="topic2"></small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-blue"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje3"></strong><br><small id="topic3"></small></div>
+                  </div>
+                </div>
+                <div class="chart col-lg-6 col-12">
+                  <div class="line-chart bg-white d-flex has-shadow">
+                    <div id="student-personal-information" class="pt-3 pl-5"></div>
+                  </div>
+                </div>
+                <div class="chart col-lg-3 col-12">
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-blue"><i class="fa fa-bar-chart-o"></i></div>
+                    <div class="text"><strong id="percentaje-general">99.9%</strong><br><small>Porcentaje de avance general</small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-greenLab"><i class="fa fa-graduation-cap"></i></div>
+                    <div class="text"><strong id="general-clasification"></strong><br><small>Desempeño general</small></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section> 
           
           <!-- Page Footer-->
           <footer class="main-footer">
