--- a/src/views/sedeMéxico.html
+++ b/src/views/sedeMéxico.html
@@ -57,11 +57,11 @@
         <div class="content-inner">
           <header class="page-header">
             <div class="container-fluid">
-              <h2 class="no-margin-bottom">Sede México</h2>
+              <h2 class="no-margin-bottom" id="titile-page">Sede México</h2>
             </div>
           </header>
           <!-- Seccion principal de visualización-->
-          <section class="dashboard-counts no-padding-bottom">
+          <section class="dashboard-counts no-padding-bottom" id="div1">
             <div class="container-fluid">
               <div class="row bg-white has-shadow">
                 <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
@@ -107,13 +107,13 @@
             </div>
           </section>
           <!-- Sección Estadisticas Generales -->
-          <section class="dashboard-header no-padding-bottom">
+          <section class="dashboard-header no-padding-bottom" id="div2">
             <div class="container-fluid">
               <div class="row" id="general-statistic"></div>
             </div>
           </section>
           <!-- Sección Tabla de estudiantes -->
-          <section class="tables">   
+          <section class="tables" id="div3">   
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-12">
@@ -138,7 +138,7 @@
                             <tr>
                               <th>#</th>
                               <th>Nombre</th>
-                              <th>Correo</th>
+                              <th class="d-none d-md-block d-lg-block d-xl-block">Correo</th>
                               <th>Generación</th>
                               <th>% Progreso</th>
                             </tr>
@@ -152,6 +152,42 @@
               </div>
             </div>
           </section>
+          <!-- Sección información individual -->
+          <section class="dashboard-header" id="individual-information">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="statistics col-lg-3 col-12">
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-pinkLab"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje1"></strong><br><small id="topic1"></small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-greenLab"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje2"></strong><br><small id="topic2"></small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-blue"><i class="fa fa-book"></i></div>
+                    <div class="text"><strong id="topic-percentaje3"></strong><br><small id="topic3"></small></div>
+                  </div>
+                </div>
+                <div class="chart col-lg-6 col-12">
+                  <div class="line-chart bg-white d-flex has-shadow">
+                    <div id="student-personal-information" class="pt-3 pl-5"></div>
+                  </div>
+                </div>
+                <div class="chart col-lg-3 col-12">
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-blue"><i class="fa fa-bar-chart-o"></i></div>
+                    <div class="text"><strong id="percentaje-general">99.9%</strong><br><small>Porcentaje de avance general</small></div>
+                  </div>
+                  <div class="statistic d-flex align-items-center bg-white has-shadow">
+                    <div class="icon bg-greenLab"><i class="fa fa-graduation-cap"></i></div>
+                    <div class="text"><strong id="general-clasification"></strong><br><small>Desempeño general</small></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section> 
           <footer class="main-footer">
             <div class="container-fluid">
               <div class="row">
